--- a/faces/faces.yml
+++ b/faces/faces.yml
@@ -1,5 +1,5 @@
 name: Faces
 description: 'face recognition'
-version: '0.1 (deepface)'
+version: '0.2'
 author: 'Tom Wiedenhöft'
 maintainer: 'Tom Wiedenhöft'
